fixed-overflow

--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
 
 body{
     background-color: rgb(215, 219, 214);
+    overflow: hidden;
 }
 
 
